[gd_scene load_steps=29 format=3 uid="uid://brbcmknkw80lv"]

[ext_resource type="Script" path="res://scripts/Player_Character.gd" id="1_n40ya"]
[ext_resource type="PackedScene" uid="uid://hyk77l0d3r4k" path="res://scenes/gun_ragdoll.tscn" id="2_lslbb"]
[ext_resource type="PackedScene" uid="uid://d4kr6ju87v02h" path="res://scenes/playerragdoll.tscn" id="2_pwxr7"]
[ext_resource type="ArrayMesh" uid="uid://dodmnuopjr2xl" path="res://assets/models/gun.obj" id="2_t2add"]
[ext_resource type="AudioStream" uid="uid://bfuuoetrx2pig" path="res://assets/sfx/Gunshot.mp3" id="3_r7cwy"]
[ext_resource type="Script" path="res://scripts/DashCooldown.gd" id="6_bafaj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k4pf7"]
albedo_color = Color(1, 1, 0.372549, 1)
emission_enabled = true
emission = Color(0.788235, 0.52549, 0, 1)
backlight_enabled = true
backlight = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_u7a6u"]
material = SubResource("StandardMaterial3D_k4pf7")
radius = 0.013
height = 0.025

[sub_resource type="Animation" id="Animation_ew7ej"]
resource_name = "Idle_gun"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gunmesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.437763, -0.370536, -0.419771), Vector3(0.437763, -0.406301, -0.419771)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gunmesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.167307, 0, 0)]
}

[sub_resource type="Animation" id="Animation_i8b6r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gunmesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.437763, -0.370536, -0.419771)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gunmesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_x5g3i"]
resource_name = "Reload_gun"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gunmesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.437763, -0.370536, -0.419771), Vector3(0.62925, -0.370536, -0.991676), Vector3(0.62925, -0.370536, -0.991676), Vector3(0.437763, -0.370536, -0.419771)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gunmesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.35, 0.45, 0.55, 0.65, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.2),
"transitions": PackedFloat32Array(1, -2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0.702617, 0, 0), Vector3(-0.359137, 0, 0), Vector3(-1.318, 0, 0), Vector3(-1.97683, 0, 0), Vector3(-2.87763, 0, 0), Vector3(2.78752, 0, 0), Vector3(2.05369, 0, 0), Vector3(1.67816, 0, 0), Vector3(1.08575, 0, 0), Vector3(0.945506, 0, 0), Vector3(0.664202, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_x1re8"]
resource_name = "Walk_gun"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gunmesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector3(0.437763, -0.370536, -0.419771), Vector3(0.276867, -0.329357, -0.419771), Vector3(0.437763, -0.370536, -0.419771), Vector3(0.515534, -0.289161, -0.419771)]
}

[sub_resource type="Animation" id="Animation_wk014"]
resource_name = "shoot_gun"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gunmesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.437763, -0.370536, -0.208706), Vector3(0.437763, -0.370536, -0.419771)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gunmesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.518537, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_chwxy"]
_data = {
"Idle_gun": SubResource("Animation_ew7ej"),
"RESET": SubResource("Animation_i8b6r"),
"Reload_gun": SubResource("Animation_x5g3i"),
"Walk_gun": SubResource("Animation_x1re8"),
"shoot_gun": SubResource("Animation_wk014")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_noo2e"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8ylon"]

[sub_resource type="BoxMesh" id="BoxMesh_w3ceb"]

[sub_resource type="Animation" id="Animation_3golp"]
resource_name = "Melee"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.369485, -0.930354, 0), Vector3(-0.976979, -0.930354, -0.767176), Vector3(0.0604402, -0.930354, -0.991364), Vector3(0.725178, -0.930354, -0.588392), Vector3(-0.369485, -0.930354, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ram6p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.369485, -0.930354, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yddjs"]
_data = {
"Melee": SubResource("Animation_3golp"),
"RESET": SubResource("Animation_ram6p")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bfwkd"]
lifetime_randomness = 0.5
direction = Vector3(0, 1, 0)
initial_velocity_max = 25.0
gravity = Vector3(0, -10, 0)
linear_accel_max = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ujiom"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_jellc"]
material = SubResource("StandardMaterial3D_ujiom")
radius = 0.05
height = 0.1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_fgofl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tji4a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8crr6"]
bg_color = Color(0.345098, 0.6, 0.6, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vwsal"]
font_size = 26

[sub_resource type="LabelSettings" id="LabelSettings_mvaic"]
font_size = 48

[node name="PlayerCharacter" type="CharacterBody3D" groups=["Damageable", "Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2136, 0)
collision_mask = 3
floor_stop_on_slope = false
script = ExtResource("1_n40ya")
shooting_delay = 1.0
playerragdollscene = ExtResource("2_pwxr7")
gunragdollscene = ExtResource("2_lslbb")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
fov = 90.0

[node name="Gun" type="Node3D" parent="Camera3D"]

[node name="Gunmesh" type="MeshInstance3D" parent="Camera3D/Gun"]
transform = Transform3D(0.005, 0, 0, 0, 0.005, 0, 0, 0, 0.004, 0.437763, -0.370536, -0.419771)
mesh = ExtResource("2_t2add")
skeleton = NodePath("../../..")

[node name="CPUParticles3D" type="CPUParticles3D" parent="Camera3D/Gun/Gunmesh"]
transform = Transform3D(13.4532, 0, 0, 0, 3.62121, 0, 0, 0, 1.16319, 0, 0, -74.253)
gi_mode = 0
emitting = false
amount = 24
lifetime = 2.0
one_shot = true
explosiveness = 1.0
mesh = SubResource("SphereMesh_u7a6u")
direction = Vector3(0, 0, -1)
spread = 20.0
initial_velocity_max = 400.0
linear_accel_max = 10.0

[node name="GunAudioPlayer" type="AudioStreamPlayer" parent="Camera3D/Gun"]
stream = ExtResource("3_r7cwy")
volume_db = -15.0
max_polyphony = 2

[node name="GunAnimationPlayer" type="AnimationPlayer" parent="Camera3D/Gun"]
libraries = {
"": SubResource("AnimationLibrary_chwxy")
}
autoplay = "Idle_gun"
playback_default_blend_time = 0.1

[node name="Walljumpcollider" type="ShapeCast3D" parent="Camera3D"]
transform = Transform3D(1.97858, 0, 0, 0, 1.2438, 0, 0, 0, 1.22602, 0, -0.726522, -0.242818)
shape = SubResource("BoxShape3D_noo2e")
target_position = Vector3(0, 0, 0)
collision_mask = 254
collide_with_areas = true

[node name="Melee" type="Node3D" parent="Camera3D"]

[node name="MeleeHitbox" type="ShapeCast3D" parent="Camera3D/Melee"]
transform = Transform3D(1.58851, 0, 0, 0, 1.27539, 0, 0, 0, 1.93896, 0, 0.540349, -1.0666)
shape = SubResource("BoxShape3D_8ylon")

[node name="MeleeMesh" type="MeshInstance3D" parent="Camera3D/Melee"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.369485, -0.930354, 0)
mesh = SubResource("BoxMesh_w3ceb")

[node name="MeleeAnim" type="AnimationPlayer" parent="Camera3D/Melee"]
libraries = {
"": SubResource("AnimationLibrary_yddjs")
}

[node name="DeathParticleEmitter" type="GPUParticles3D" parent="."]
emitting = false
amount = 80
one_shot = true
speed_scale = 0.8
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_bfwkd")
draw_pass_1 = SubResource("SphereMesh_jellc")

[node name="HealthRegenTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
one_shot = true

[node name="HealthRegenTick" type="Timer" parent="."]
process_callback = 0

[node name="TickTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.01
autostart = true

[node name="RespawnTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 10.0
one_shot = true

[node name="TPResetTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 10.0
one_shot = true

[node name="Playermesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_fgofl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_tji4a")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DashCooldown" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -269.0
offset_right = 54.0
offset_bottom = -17.0
grow_vertical = 0
scale = Vector2(1.48, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_8crr6")
max_value = 60.0
step = 0.1
value = 60.0
fill_mode = 3
script = ExtResource("6_bafaj")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 12.0
offset_top = 767.0
offset_right = 76.0
offset_bottom = 803.0
text = "Dash"
label_settings = SubResource("LabelSettings_vwsal")

[node name="Ammocount" type="Label" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -369.0
offset_top = -198.0
offset_right = -239.0
offset_bottom = -131.0
grow_horizontal = 0
grow_vertical = 0
label_settings = SubResource("LabelSettings_mvaic")

[connection signal="timeout" from="HealthRegenTimer" to="." method="_on_health_regen_timer_timeout"]
[connection signal="timeout" from="HealthRegenTick" to="." method="_on_health_regen_tick_timeout"]
[connection signal="timeout" from="TickTimer" to="." method="_on_tick_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="TPResetTimer" to="." method="_on_tp_reset_timer_timeout"]
